@@ -62,7 +62,6 @@ module Raylib
   SUPPORT_FILEFORMAT_GIF = 1
   SUPPORT_FILEFORMAT_QOI = 1
   SUPPORT_FILEFORMAT_DDS = 1
-  SUPPORT_FILEFORMAT_HDR = 1
   SUPPORT_IMAGE_EXPORT = 1
   SUPPORT_IMAGE_GENERATION = 1
   SUPPORT_IMAGE_MANIPULATION = 1
